fix: fixed img and link tags

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./style.css" />
-        <link rel="stylesheet" href="./fonts/fonts.css" />
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">       
+        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./fonts/fonts.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap">        
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap">
         <title>CV Elena Leusik</title>
     </head>
     <body>
         <div class="container">
             <div id="btn" class="burger-btn">
                 <span></span>
-            </div>  
-            <nav class="container">                                                    
+            </div>
+            <nav class="container">
                 <ul id="menu" class="menu">
                     <li class="menu-item"><a href="#Summary">Summary</a></li>
                     <li class="menu-item"><a href="#Skills">Technical Skills</a></li>
@@ -23,20 +23,20 @@
                     <li class="menu-item"><a href="#Experience">Professional Experience</a></li>
                     <li class="menu-item"><a href="#Project">Project</a></li>
                 </ul>
-            </nav>                                    
-            <header class="container">                          
+            </nav>
+            <header class="container">
                 <div class="header-figure">
                     <figure class="avatar">
-                        <img class="avatar-img" src="./images/CV_Leusik.jpg" alt="Leusik Elena" />  
+                        <img class="avatar-img" src="./images/CV_Leusik.jpg" alt="Leusik Elena">
                     </figure>
-                </div>                    
+                </div>
                 <div class="title">
                     <h1>Elena Leusik</h1>
                     <h2 class="subtitle">Junior frontend-developer</h2>
                 </div>
             </header>
             <main>
-                <aside>                     
+                <aside>
                     <article class="aside-article">
                         <h3>Contacts</h3>
                         <hr>
@@ -45,8 +45,8 @@
                             <li><i class="fa-li fa fa-mobile"></i>+48571084351</li>
                             <li><i class="fa-li fa fa-envelope"></i>elena.leusik@gmail.com</li>
                             <li><i class="fa-li fa fa-github"></i><a href="https://github.com/elen-jagger">elen-jagger</a></li>
-                        </ul> 
-                    </article>                           
+                        </ul>
+                    </article>
                     <article class="aside-article">
                         <h3>English Level</h3>
                         <hr>
@@ -54,40 +54,40 @@
                         <a class="certificate" href="https://www.efset.org/cert/wSuRFt" target="_blank"><img src="./images/certificate.jpg" alt="eng-certificate"></a>
                         <p>
                             Advanced course of medical English in BSMU
-                        </p>    
-                    </article>                                    
+                        </p>
+                    </article>
                 </aside>
-                <section>                
+                <section>
                     <h6>section title</h6>
                     <article class="section-article">
-                        <h3 id="Summary">Summary</h3>      
-                        <hr>                 
+                        <h3 id="Summary">Summary</h3>
+                        <hr>
                         <p>
                             Novice frontend-developer with medical education. I have Candidate of Sciences in Medicine degree. Working on it gave me a huge experience in research work, data collecting and analysis, working in team and independently, time-management, adherence to the deadlines and extensive English practice. As my hobby is photographing I'm skilled in color theory and picture composition. I'm also experienced user of Photoshop, Lightroom and Illustrator.
                         </p>
-                    </article>     
+                    </article>
                     <article class="section-article">
                         <h3 id="Skills">Technical Skills</h3>
-                        <hr>  
+                        <hr>
                         <ul>
                             <li>Programming languages and technologies: HTML, CSS, JavaScript</li>
                             <li>Programming practices: Agile, Kanban</li>
                             <li>Tools: Git, VS Code, Adobe Photoshop, Adobe Lightroom, Adobe Illustrator, SPSS Statistics</li>
                             <li>Other skills: research work, data search (in <a href="https://pubmed.ncbi.nlm.nih.gov/">PubMed</a> and other databases) and analysis, medical statistics, medical translations, research articles writing, presentation making and public speaking, mentoring and supervising of junior researchers, blind typing (Russian keyboard layout), photographing and photo editing, color theory and composition knowlwdge</li>
-                        </ul>  
-                    </article>   
-                    <article class="section-article">              
+                        </ul>
+                    </article>
+                    <article class="section-article">
                         <h3 id="Code">Code Sample</h3>
-                        <hr>  
+                        <hr>
                         <div>
                             <a href="https://www.codewars.com/kata/513e08acc600c94f01000001">Codewars: RGB To Hex Conversion</a>
-                            <pre>                         
+                            <pre>
                                 <code>
 function rgb(r, g, b){
 
     function convert(num) {
     if (num &lt;= 0) { return '00'; }
-    else if (num > 255) { 
+    else if (num &gt; 255) { 
         return (255).toString(16); 
     } else {    
         let hexaNum = (num).toString(16); 
@@ -102,15 +102,15 @@ function rgb(r, g, b){
     const Hex = convert(r) + convert(g) + 
         convert(b);
     return Hex.toUpperCase();
-}                                                     
+}
                                 </code>
                             </pre>
                         </div>
-                    </article>      
+                    </article>
                     <article class="section-article">
                         <h3 id="Experience">Education and Professional Experience</h3>
-                        <hr>  
-                        <ul>                    
+                        <hr>
+                        <ul>
                             <li><h3>IT</h3>
                                 <ul>
                                     <li>Self-education - <a href="https://learn.javascript.ru/">JavaScript guide</a></li>
@@ -124,61 +124,56 @@ function rgb(r, g, b){
                                     <li>Candidate of Sciences in Medicine degree</li>
                                 </ul>
                             </li>
-                        </ul>  
-                    </article>                                      
+                        </ul>
+                    </article>
                     <article class="section-article">
                         <h3 id="Project">Project</h3>
-                        <hr>  
-                        <p>Web-pages: Site-portfolio, image searching page, pages for Museum and Pets shelter. <br> Custom video player. <br> All projects are made using Html5, CSS3 and Js.</p>                        
+                        <hr>
+                        <p>Web-pages: Site-portfolio, image searching page, pages for Museum and Pets shelter. <br> Custom video player. <br> All projects are made using Html5, CSS3 and Js.</p>
                         <div class="project">
                             <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFEPRESCHOOL/portfolio/" target="_blank">
-                                <img class="project-img" src="./images/portfolio.jpg" alt="Portfolio" />                                
+                                <img class="project-img" src="./images/portfolio.jpg" alt="Portfolio">
                             </a>
                             <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFEPRESCHOOL/image-galery/" target="_blank">
-                                <img class="project-img" src="./images/image-gallery.jpg" alt="Image-galery" />                                
+                                <img class="project-img" src="./images/image-gallery.jpg" alt="Image-galery">
                             </a>
                             <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFE2021Q3/museum-adaptive/" target="_blank">
-                                <img class="project-img" src="./images/Museum.jpg" alt="Museum" />                                
+                                <img class="project-img" src="./images/Museum.jpg" alt="Museum">
                             </a>
                             <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFE2022Q1/shelter/pages/main/" target="_blank">
-                                <img class="project-img" src="./images/shelter.jpg" alt="Shelter" />                                
+                                <img class="project-img" src="./images/shelter.jpg" alt="Shelter">
                             </a>
                             <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFEPRESCHOOL/custom-video-player/" target="_blank">
-                                <img class="project-img" src="./images/video_player.jpg" alt="video player" />
+                                <img class="project-img" src="./images/video_player.jpg" alt="video player">
                             </a>
-                        </div>            
-                    </article>                                           
-                </section>               
+                        </div>
+                    </article>
+                </section>
             </main>
             <footer>
                 <div class="author">
                     <a href="https://github.com/elen-jagger" target="_blank"><h3>Elen-jagger</h3></a>
                     <span class="year">, 2022.</span>
                     <a href="https://rs.school/js/" target="_blank">
-                        <img class="rs-school-img" src="./images/rs_school_js.svg" alt="RS School" />
+                        <img class="rs-school-img" src="./images/rs_school_js.svg" alt="RS School">
                     </a>
-                </div>            
+                </div>
             </footer>
         </div>
     <script>
-            
         const btn = document.querySelector('.burger-btn');
         const menu = document.querySelector('.menu');
         const menuItem = document.querySelectorAll('.menu-item');
-
         function toggleMenu() {
             btn.classList.toggle("open");               
             menu.classList.toggle("menu-open");  
         }
-
         function closeMenu() {
             btn.classList.remove("open");               
             menu.classList.remove("menu-open");  
         }
-
         btn.addEventListener('click', toggleMenu);
         menuItem.forEach((el) => el.addEventListener('click', closeMenu));
-    
         console.log('самооценка 130 баллов');
         console.log('студент засабмитил в rs app ссылку на своё CV, задеплоенное на gh-pages +10');
         console.log('вёрстка валидная +10');
@@ -189,7 +184,7 @@ function rgb(r, g, b){
         console.log('на странице СV есть фото или аватарка автора, пропорции изображения не искажены, у изображения есть атрибут alt +10');
         console.log('навигация, контакты для связи и перечень навыков оформлены в виде списка ul > li или ul > li > a +10');
         console.log('Содержание CV +30. CV содержит: краткую информацию о себе +5 контакты для связи +5 перечень навыков +5 пример кода. Код добавляется при помощи символов и тегов, а не картинкой +5 перечень выполненных учебных проектов со ссылками на исходный код или страницу приложения +5 информацию об образовании и уровне английского +5');
-        console.log('CV выполнено на английском языке +10');        
+        console.log('CV выполнено на английском языке +10');
     </script>
     </body>
 </html>
