feat: add new projects

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li class="menu-item"><a href="#Skills">Technical Skills</a></li>
                     <li class="menu-item"><a href="#Code">Code Sample</a></li>
                     <li class="menu-item"><a href="#Experience">Professional Experience</a></li>
-                    <li class="menu-item"><a href="#Project">Project</a></li>
+                    <li class="menu-item"><a href="#Project">Projects</a></li>
                 </ul>
             </nav>
             <header class="container">
@@ -39,7 +39,7 @@
                         <h3>Contacts</h3>
                         <hr>
                         <ul class="fa-ul">
-                            <li><i class="fa-li fa fa-map-marker"></i>Minsk, Belarus</li>
+                            <li><i class="fa-li fa fa-map-marker"></i>Warsaw, Poland</li>
                             <li><i class="fa-li fa fa-mobile"></i>+48571084351</li>
                             <li><i class="fa-li fa fa-envelope"></i>elena.leusik@gmail.com</li>
                             <li><i class="fa-li fa fa-github"></i><a href="https://github.com/elen-jagger">elen-jagger</a></li>
@@ -119,21 +119,24 @@ function rgb(r, g, b){
                         </ul>
                     </article>
                     <article class="section-article">
-                        <h3 id="Project">Project</h3>
+                        <h3 id="Project">Projects</h3>
                         <hr>
-                        <p>Web-pages: Site-portfolio, image searching page, pages for Museum and Pets shelter.<br>Custom video player.<br>All projects are made using Html5, CSS3 and Js.</p>
+                        <p>Web-pages and applications: Minesweeper Game, Virtual Keyboard, Image Searching Page, a Page for Pets Shelter, Page-Portfolio and Custom Video Player.<br>Custom video player.<br>All projects are made using Html5, CSS3 and Js.</p>
                         <div class="project">
-                            <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFEPRESCHOOL/portfolio/" target="_blank">
-                                <img class="project-img" src="./images/portfolio.jpg" alt="Portfolio">
+                            <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFE2023Q1/minesweeper/" target="_blank">
+                                <img class="project-img" src="./images/minesweeper.jpg" alt="minesweeper game">
+                            </a>
+                            <a href="https://elen-jagger.github.io/virtual-keyboard/" target="_blank">
+                                <img class="project-img" src="./images/virt-kbd.jpg" alt="virtual keyboard">
                             </a>
                             <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFEPRESCHOOL/image-galery/" target="_blank">
                                 <img class="project-img" src="./images/image-gallery.jpg" alt="Image-galery">
                             </a>
-                            <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFE2021Q3/museum-adaptive/" target="_blank">
-                                <img class="project-img" src="./images/Museum.jpg" alt="Museum">
-                            </a>
                             <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFE2022Q1/shelter/pages/main/" target="_blank">
                                 <img class="project-img" src="./images/shelter.jpg" alt="Shelter">
+                            </a>
+                            <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFEPRESCHOOL/portfolio/" target="_blank">
+                                <img class="project-img" src="./images/portfolio.jpg" alt="Portfolio">
                             </a>
                             <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFEPRESCHOOL/custom-video-player/" target="_blank">
                                 <img class="project-img" src="./images/video_player.jpg" alt="video player">
@@ -145,7 +148,7 @@ function rgb(r, g, b){
             <footer>
                 <div class="author">
                     <a href="https://github.com/elen-jagger" target="_blank"><h3>Elen-jagger</h3></a>
-                    <span class="year">, 2022.</span>
+                    <span class="year">, 2023.</span>
                     <a href="https://rs.school/js/" target="_blank">
                         <img class="rs-school-img" src="./images/rs_school_js.svg" alt="RS School">
                     </a>
