feat: add new project

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                         <a class="certificate" href="https://www.efset.org/cert/wSuRFt" target="_blank"><img src="./images/certificate.jpg" alt="eng-certificate"></a>
                         <p>Advanced course of medical English in BSMU</p>
                     </article>
+                    <article class="aside-article">
+                        <h3>Polish Level</h3>
+                        <hr>
+                        <p><strong>B1-B2</strong></p>
+                    </article>
                 </aside>
                 <section>
                     <h6>section title</h6>
@@ -64,8 +69,8 @@
                         <h3 id="Skills">Technical Skills</h3>
                         <hr>
                         <ul>
-                            <li>Programming languages and technologies: HTML, CSS, JavaScript</li>
-                            <li>Programming practices: Agile, Kanban</li>
+                            <li>Programming languages and technologies: React, TypeScript, JavaScript, HTML, CSS, SASS, Material UI</li>
+                            <li>Programming practices: Scrum, Agile, Kanban</li>
                             <li>Tools: Git, VS Code, Adobe Photoshop, Adobe Lightroom, Adobe Illustrator, SPSS Statistics</li>
                             <li>Other skills: research work, data search (in <a href="https://pubmed.ncbi.nlm.nih.gov/">PubMed</a> and other databases) and analysis, medical statistics, medical translations, research articles writing, presentation making and public speaking, mentoring and supervising of junior researchers, blind typing (Russian keyboard layout), photographing and photo editing, color theory and composition knowlwdge</li>
                         </ul>
@@ -105,8 +110,9 @@ function rgb(r, g, b){
                         <ul>
                             <li><h3>IT</h3>
                                 <ul>
-                                    <li>Self-education - <a href="https://learn.javascript.ru/">JavaScript guide</a></li>
-                                    <li>Rolling scopes school</li>
+                                    <li>w3schools courses</li>
+                                    <li>Self-education - <a href="https://learn.javascript.ru/" target="_blank">JavaScript guide</a></li>
+                                    <li><a href="https://rs.school/index.html" target="_blank">Rolling scopes school</a></li>
                                 </ul>
                             </li>
                             <li><h3>Medicine</h3>
@@ -121,8 +127,11 @@ function rgb(r, g, b){
                     <article class="section-article">
                         <h3 id="Project">Projects</h3>
                         <hr>
-                        <p>Web-pages and applications: Minesweeper Game, Virtual Keyboard, Image Searching Page, a Page for Pets Shelter, Page-Portfolio and Custom Video Player.<br>Custom video player.<br>All projects are made using Html5, CSS3 and Js.</p>
+                        <p>Web-pages and applications: Game for studying CSS selectors, Minesweeper Game, Virtual Keyboard, Image Searching Page, a Page for Pets Shelter, Page-Portfolio<br>All projects are made using TypeScript or vanilla JS, Html5, CSS3, implement working with API.</p>
                         <div class="project">
+                            <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFE2023Q1/rss-css-selectors/" target="_blank">
+                                <img class="project-img" src="./images/selectors.jpg" alt="css selectors game">
+                            </a>
                             <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFE2023Q1/minesweeper/" target="_blank">
                                 <img class="project-img" src="./images/minesweeper.jpg" alt="minesweeper game">
                             </a>
@@ -137,9 +146,6 @@ function rgb(r, g, b){
                             </a>
                             <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFEPRESCHOOL/portfolio/" target="_blank">
                                 <img class="project-img" src="./images/portfolio.jpg" alt="Portfolio">
-                            </a>
-                            <a href="https://rolling-scopes-school.github.io/elen-jagger-JSFEPRESCHOOL/custom-video-player/" target="_blank">
-                                <img class="project-img" src="./images/video_player.jpg" alt="video player">
                             </a>
                         </div>
                     </article>
